[package]
name = "aweme_db_decrypt"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "aweme-db-decrypt"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rustyline = "14"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
